<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

        <TextView
            android:id="@+id/victory_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/victory_txt" />

        <LinearLayout
            android:id="@+id/main_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/team_red"
                    android:textColor="@color/redBtnTxtColor"
                    style="@style/teamStyle"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin">

                    <Button
                        android:id="@+id/team_a_kills_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="24dp"
                        android:onClick="addKillsForTeamA"
                        android:text="@string/kills_btn"
                        style="@style/redBtnStyle"/>

                    <TextView
                        android:id="@+id/team_a_kills"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/team_a_kills_btn"
                        android:fontFamily="sans-serif-light"
                        android:layout_marginLeft="@dimen/horizontal_margin"
                        style="@style/redDisplayStyle" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin">

                    <Button
                        android:id="@+id/team_a_assists_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="24dp"
                        android:onClick="addAssistsForTeamA"
                        android:text="@string/assists_btn"
                        style="@style/redBtnStyle"/>

                    <TextView
                        android:id="@+id/team_a_assists"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/team_a_assists_btn"
                        android:fontFamily="sans-serif-light"
                        android:layout_marginLeft="@dimen/horizontal_margin"
                        style="@style/redDisplayStyle" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin">

                    <Button
                        android:id="@+id/team_a_towers_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="24dp"
                        android:onClick="addTowersForTeamA"
                        android:text="@string/towers_btn"
                        style="@style/redBtnStyle"/>

                    <TextView
                        android:id="@+id/team_a_towers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/team_a_towers_btn"
                        android:fontFamily="sans-serif-light"
                        android:layout_marginLeft="@dimen/horizontal_margin"
                        style="@style/redDisplayStyle" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin">

                    <Button
                        android:id="@+id/team_a_drakes_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="24dp"
                        android:onClick="addDrakesForTeamA"
                        android:text="@string/drakes_btn"
                        style="@style/redBtnStyle"/>

                    <TextView
                        android:id="@+id/team_a_drakes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/team_a_drakes_btn"
                        android:fontFamily="sans-serif-light"
                        android:layout_marginLeft="@dimen/horizontal_margin"
                        style="@style/redDisplayStyle" />

                </RelativeLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/horizontal_margin"
                    android:layout_marginRight="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:onClick="victoryForTeamA"
                    android:text="@string/nexus_btn"
                    style="@style/redBtnStyle"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/team_purple"
                    android:textColor="@color/blueBtnStrokeColor"
                    style="@style/teamStyle" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin">

                    <Button
                        android:id="@+id/team_b_kills_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="24dp"
                        android:onClick="addKillsForTeamB"
                        android:text="@string/kills_btn"
                        style="@style/blueBtnStyle"/>

                    <TextView
                        android:id="@+id/team_b_kills"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/team_b_kills_btn"
                        android:fontFamily="sans-serif-light"
                        android:layout_marginRight="@dimen/horizontal_margin"
                        style="@style/blueDisplayStyle" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin">

                    <Button
                        android:id="@+id/team_b_assists_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="24dp"
                        android:onClick="addAssistsForTeamB"
                        android:text="@string/assists_btn"
                        style="@style/blueBtnStyle"/>

                    <TextView
                        android:id="@+id/team_b_assists"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/team_b_assists_btn"
                        android:fontFamily="sans-serif-light"
                        android:layout_marginRight="@dimen/horizontal_margin"
                        style="@style/blueDisplayStyle" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin">

                    <Button
                        android:id="@+id/team_b_towers_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="24dp"
                        android:onClick="addTowersForTeamB"
                        android:text="@string/towers_btn"
                        style="@style/blueBtnStyle"/>

                    <TextView
                        android:id="@+id/team_b_towers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/team_b_towers_btn"
                        android:fontFamily="sans-serif-light"
                        android:layout_marginRight="@dimen/horizontal_margin"
                        style="@style/blueDisplayStyle" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin">

                    <Button
                        android:id="@+id/team_b_drakes_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="24dp"
                        android:onClick="addDrakesForTeamB"
                        android:text="@string/drakes_btn"
                        style="@style/blueBtnStyle"/>

                    <TextView
                        android:id="@+id/team_b_drakes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/team_b_drakes_btn"
                        android:fontFamily="sans-serif-light"
                        android:layout_marginRight="@dimen/horizontal_margin"
                        style="@style/blueDisplayStyle" />

                </RelativeLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/horizontal_margin"
                    android:layout_marginRight="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:onClick="victoryForTeamB"
                    android:text="@string/nexus_btn"
                    style="@style/blueBtnStyle"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/main_view"
            android:layout_marginTop="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/horizontal_margin"
            android:onClick="reset"
            android:text="@string/reset_btn"
            style="@style/btnStyle"/>

    </RelativeLayout>
</ScrollView>